app/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-app-deployment
spec:
  # ... other settings ...
  selector:
    matchLabels:
      app: famly-app
  template:
    metadata:
      labels:
        app: famly-app
    spec:
      containers:
        - name: famly-app
          image: pant7/famly-app:v1
          imagePullPolicy: Always
