app/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: famly-app-service
spec:
  selector:
    app: famly-app
  ports:
    - protocol: TCP
      port: 5000  # Expose the port your app runs on
      targetPort: 5000
  type: LoadBalancer
