app/app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx  # Use the correct Ingress controller class
spec:
  rules:
    - host: famlytest.com # Replace with your desired domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: famly-app-service
                port:
                  number: 5000  # Port exposed by your app service
